--- a/src/css/blog/_utilities.scss
+++ b/src/css/blog/_utilities.scss
@@ -6,13 +6,13 @@
   cursor: pointer;
   outline: none;
   border: none;
+  margin: 10px;
 
   @if ($importance == high) {
     background: #f6d342;
     color: #fff;
     &:hover {
       box-shadow: -5px 5px 50px 1px $orange;
-      // box-shadow: 2px 2px 10px 2px  rgba(117, 117, 117, 0.808);
     }
     &:focus {
       box-shadow: 0 0 0 0;
