--- a/src/css/blog/Homepage/_Paragraph1.scss
+++ b/src/css/blog/Homepage/_Paragraph1.scss
@@ -11,7 +11,7 @@
   margin: 0vh 0;
   clip-path: polygon(0% 100%, 100% 50%, 100% 0%, 0% 0%);
 
-  p {
+  section {
     @include border(green);
     width: 43vw;
     height: 500px;
