--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -135,7 +135,7 @@
   grid-template-columns: repeat(2, 1fr);
   margin: 0vh 0;
   clip-path: polygon(0% 100%, 100% 50%, 100% 0%, 0% 0%); }
-  .paragraph_1 p {
+  .paragraph_1 section {
     border: 2px solid transparent;
     width: 43vw;
     height: 500px;
@@ -151,18 +151,18 @@
     color: grey;
     background: #f4f4f4;
     border-radius: 5px; }
-    .paragraph_1 p #q-left {
+    .paragraph_1 section #q-left {
       position: absolute;
       top: 10px;
       left: 20px; }
-    .paragraph_1 p #q-right {
+    .paragraph_1 section #q-right {
       position: absolute;
       right: 20px;
       bottom: 10px; }
-    .paragraph_1 p .quote-item {
+    .paragraph_1 section .quote-item {
       padding: 1rem;
       color: red; }
-    .paragraph_1 p i {
+    .paragraph_1 section i {
       font-size: 1rem;
       color: grey; }
   .paragraph_1__art {
@@ -225,8 +225,9 @@
   height: 700px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-  text-align: center; }
+  grid-template-rows: repeat(2, 1fr);
+  text-align: center;
+  position: relative; }
   .articles .h2 {
     grid-area: 1/1;
     margin: 0 0 0 150px;
@@ -245,32 +246,42 @@
       color: orange; }
     .articles .h2 > .h2_2 {
       font-size: 5rem; }
-  .articles p {
+  .articles .articles__paragraph {
     border: 2px solid transparent;
-    width: 40vw;
-    height: 200px;
-    margin: 250px 40px;
-    font-size: 15px;
-    padding: 2rem;
-    grid-area: 1/1; }
-  .articles .buttons {
+    height: fit-content;
+    margin: 0px 40px;
+    position: absolute;
+    bottom: 100px;
     display: flex;
-    flex-direction: row;
-    text-align: left;
-    width: 400px;
-    height: 100px;
+    flex-direction: column;
     justify-content: center;
-    padding: 1rem;
-    margin-top: 20px;
-    border-radius: 1rem;
-    flex-wrap: wrap-reverse; }
+    align-items: center; }
+    .articles .articles__paragraph p {
+      border: 2px solid transparent;
+      width: 40vw;
+      height: 200px;
+      font-size: 15px;
+      padding: 2rem;
+      grid-area: 1/1; }
+    .articles .articles__paragraph .buttons {
+      display: flex;
+      flex-direction: row;
+      text-align: left;
+      width: 400px;
+      height: 100px;
+      justify-content: center;
+      padding: 1rem;
+      margin-top: 20px;
+      border-radius: 1rem;
+      flex-wrap: wrap-reverse; }
   .articles-author {
     border: 2px solid transparent;
+    grid-area: 1 / 2;
     display: flex;
     justify-content: center;
     align-items: center;
     height: fit-content;
-    margin: auto;
+    margin: 200px 0 0 100px;
     background: lightblue;
     border-radius: 100%;
     width: 90%; }
