--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -11,6 +11,7 @@
 @import "Articlespage/articlepage-header";
 @import "Articlespage/article__artwork";
 @import "Articlespage/articlePage__body";
+@import "ArticlesPage/aritcle__preview";
 
 @import "RegisterPage/registerpage";
 @import "footer";
