Finished article preview UI and db functionality

--- a/src/css/blog/Articlespage/_aritcle__preview.scss
+++ b/src/css/blog/Articlespage/_aritcle__preview.scss
@@ -24,11 +24,12 @@
     flex-direction: row;
     position: absolute;
     top: 0;
-    filter: blur(8px);
+    filter: blur(5px);
     z-index: 301;
   }
   &__items {
     position: absolute;
+    width: 100vw;
     top: 0px;
     margin: 100px 0;
     z-index: 302;
@@ -62,12 +63,18 @@
           text-align: center;
           height: 100px;
         }
+        p{
+          @include border(yellow);
+          width: 400px;
+          margin: 0 auto;
+          height: 100px;
+          overflow: hidden;
+        }
         &__buttons {
-          width: 120%;
+          width: 100%;
           height: 150px;
           display: flex;
           flex-direction: row;
-          justify-content: center;
           align-items: flex-end;
           @include border(blue);
         }
