--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -712,10 +712,11 @@
     flex-direction: row;
     position: absolute;
     top: 0;
-    filter: blur(8px);
+    filter: blur(5px);
     z-index: 301; }
   .article__preview__maincon__items {
     position: absolute;
+    width: 100vw;
     top: 0px;
     margin: 100px 0;
     z-index: 302;
@@ -741,12 +742,17 @@
         .article__preview__maincon__items .pre__part__middle__header {
           text-align: center;
           height: 100px; }
+        .article__preview__maincon__items .pre__part__middle p {
+          border: 2px solid transparent;
+          width: 400px;
+          margin: 0 auto;
+          height: 100px;
+          overflow: hidden; }
         .article__preview__maincon__items .pre__part__middle__buttons {
-          width: 120%;
+          width: 100%;
           height: 150px;
           display: flex;
           flex-direction: row;
-          justify-content: center;
           align-items: flex-end;
           border: 2px solid transparent; }
 
