--- a/src/css/blog/Homepage/_counselling.scss
+++ b/src/css/blog/Homepage/_counselling.scss
@@ -107,16 +107,22 @@
 
   &__booking {
     width: inherit;
-    height: 200px;
+    height: 500px;
     @include border(green);
-    background: #f4f4f4;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem;
 
     &__part1 {
-      @include border(#fff);
+      @include border(red);
+      width: 600px;
       display: flex;
+      height: inherit;
       flex-direction: column;
       align-items: center;
+      justify-content: space-evenly;
       h2 {
         color: royalblue;
       }
