--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -32,20 +32,24 @@
       text-align: center;
       position: relative;
       top: 100px;
-      @include border;
+      @include border(green);
 
-      & > .h2_1 {
-        font-size: 2rem;
-        font-weight: 100;
-        color: orange;
-      }
+      // & > .h2_1 {
+      //   font-size: 2rem;
+      //   font-weight: 100;
+      //   color: orange;
+      // }
 
-      & > .h2_2 {
-        font-size: 5rem;
+     .h2_2 {
+        // font-size: 2rem;
+        height: 100px;
+        b{
+          font-size: 5rem;
+        }
       }
     }
     p {
-      @include border;
+      @include border(red);
       width: 500px;
       height: 200px;
       margin: 10% 10%;
@@ -59,7 +63,7 @@
       height: 400px;
       position: relative;
       display: flex;
-      @include border;
+      @include border(red);
     }
   }
   .articles__paragraph {
@@ -72,6 +76,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    grid-area: 1/1;
 
     p {
       @include border(gold);
@@ -79,7 +84,6 @@
       height: 200px;
       font-size: 15px;
       padding: 2rem;
-      grid-area: 1/1;
     }
 
     .buttons {
@@ -107,7 +111,6 @@
     background: lightblue;
     border-radius: 100%;
     width: 90%;
-    // clip-path: ellipse();
     img {
       z-index: 200;
     }
