--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -228,7 +228,7 @@
   grid-template-rows: repeat(2, 1fr);
   text-align: center;
   position: relative; }
-  .articles .h2 {
+  .articles__firstChild {
     grid-area: 1/1;
     margin: 0 0 0 150px;
     color: orange;
@@ -240,12 +240,36 @@
     position: relative;
     top: 50px;
     border: 2px solid transparent; }
-    .articles .h2 > .h2_1 {
+    .articles__firstChild > .h2_1 {
       font-size: 2rem;
       font-weight: 100;
-      color: orange; }
-    .articles .h2 > .h2_2 {
-      font-size: 5rem; }
+      color: orange;
+      width: 360px;
+      height: fit-content;
+      padding: 1rem;
+      word-wrap: wrap;
+      text-align: center;
+      position: relative;
+      top: 100px;
+      border: 2px solid transparent; }
+      .articles__firstChild > .h2_1 .h2_2 {
+        height: 100px; }
+        .articles__firstChild > .h2_1 .h2_2 b {
+          font-size: 5rem; }
+    .articles__firstChild p {
+      border: 2px solid transparent;
+      width: 500px;
+      height: 200px;
+      margin: 10% 10%;
+      font-size: 15px;
+      padding: 2rem;
+      grid-area: 2/1; }
+    .articles__firstChild__art {
+      width: 50vw;
+      height: 400px;
+      position: relative;
+      display: flex;
+      border: 2px solid transparent; }
   .articles .articles__paragraph {
     border: 2px solid transparent;
     height: fit-content;
@@ -255,14 +279,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    grid-area: 1/1; }
     .articles .articles__paragraph p {
       border: 2px solid transparent;
       width: 40vw;
       height: 200px;
       font-size: 15px;
-      padding: 2rem;
-      grid-area: 1/1; }
+      padding: 2rem; }
     .articles .articles__paragraph .buttons {
       display: flex;
       flex-direction: row;
@@ -920,8 +944,7 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
- "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   overflow-x: hidden; }
   body .move-right {
     animation: moveRight 1s ease forwards infinite; }
